# HMI-Image-CSV-Processing

./: CMakeLists.txt  README.md
Data/Bibliotheque/: Cerveau.csv  Descripteurs.csv  Formes.csv  Tigre.csv
Source/: Bibliotheques.cpp  traitement.cpp
header/: Bibliotheques.hpp  traitement.hpp
